# learnRust

./: .gitignore  README.md  format-all.ps1
chapter_1/: Cargo.toml
chapter_2/: Cargo.toml
chapter_2/src/: main.rs
chapter_3/branches/: Cargo.toml
chapter_3/branches/src/: main.rs
chapter_3/functions/: Cargo.toml
chapter_3/functions/src/: main.rs
chapter_3/loops/: Cargo.toml
chapter_3/loops/src/: main.rs
chapter_3/projects/fibonacci/: Cargo.toml
chapter_3/projects/temperature_converter/: Cargo.toml
chapter_3/variables/: Cargo.toml
chapter_3/variables/src/: main.rs
chapter_4/ownership/: Cargo.toml
chapter_4/ownership/src/: main.rs
chapter_4/slice_type/: Cargo.toml
chapter_4/slice_type/src/: main.rs
chapter_5/methods/: Cargo.toml
chapter_5/methods/src/: main.rs
chapter_5/structs/: Cargo.toml
chapter_5/structs/src/: main.rs
chapter_6/enums/: Cargo.toml
chapter_6/enums/src/: main.rs
chapter_7/communicator/: Cargo.toml
chapter_7/communicator/src/: lib.rs
chapter_7/privacy/: Cargo.toml
chapter_7/privacy/src/: lib.rs
chapter_7/use_library/: Cargo.toml
chapter_7/use_library/src/: main.rs
chapter_8/hash_maps/: Cargo.toml
chapter_8/hash_maps/src/: main.rs
chapter_8/mean_median_mode/: Cargo.toml
chapter_8/mean_median_mode/src/: main.rs
chapter_8/strings/: Cargo.toml
chapter_8/vectors/: Cargo.toml
projects/even_fibonnaci/: Cargo.toml
projects/factorial_digit_sum/: Cargo.toml
projects/largest_palindrome/: Cargo.toml
projects/multiples_3_5/: Cargo.toml
projects/smallest_divisible_1_through_20/: Cargo.toml
(+11 files in other folders)
