[package]
name = "use_library"
version = "0.1.0"
authors = ["ploiu <ploiu415@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# this is how we specify specific dependency properties
[dependencies.communicator]
# this is how we reference a local crate
path = "../communicator"
